fixed alignment errors

--- a/bbcProject/assets/bbcClone.css
+++ b/bbcProject/assets/bbcClone.css
@@ -124,7 +124,10 @@
 }
 
 #tech {
+	font-size: 12px;
 	margin-left: 8px;
+	position: relative;
+	top: -10px;
 
 }
 
@@ -141,6 +144,8 @@
 #article-hr {
 	border-top: 1px solid #a91717;
 	width: 50px;
+	position: relative;
+	bottom: 10px;
 }
 
 #watch-listen {
@@ -148,6 +153,7 @@
 	width: 300px;
 	float: right;
 }
+
 .topBar-menu {
 	font-weight: bold;
 	font-size: 80%;
@@ -173,6 +179,8 @@
 .related-articles {
 	color: black;
 	text-decoration: none;
+	position: relative;
+	bottom: 10px;
 }
 
 .watch-side-image {
@@ -197,13 +205,17 @@
 .clock {
 	height: 12px;
 	position: relative;
-	top: 1px;
+	top: -8px;
+	padding-right: 5px;
 }
 
 .time {
 	color: #5a5a5a;
 	border-right: 1px solid #CCCCCC;
 	font-size: 12px;
+	padding-right: 5px;
+	position: relative;
+	top: -10px;
 }
 
 .side-article {
